<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".SplashActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lyons_serif_black"
            android:text="@string/app_name"
            android:textSize="@dimen/textSizeLarge"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/logo_weather_icon" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:hint="@string/enter_your_location">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:drawableRight="@drawable/ic_location_on_24"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvAlternativeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:gravity="center_horizontal"
            android:fontFamily="@font/lyons_serif"
            android:text="@string/alternativetext"
            android:textSize="@dimen/textSizeMedium"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_background_white"
            android:layout_margin="@dimen/fab_margin"
            android:padding="@dimen/fab_margin"
            android:onClick="onClickDetectLocation"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tvDetectMyLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lyons_serif_bold"
                android:text="@string/detect_location"
                android:textSize="@dimen/textSizeLarge"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/detect_location_size"
                android:layout_height="@dimen/detect_location_size"
                app:srcCompat="@drawable/ic_location_searching_24"
                app:tint="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="@color/color_accent"
            app:cornerRadius="@dimen/button_radius"
            app:strokeColor="@color/white"
            android:onClick="onContinue"
            android:text="@string/continue_text" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>